--- a/sean8223/jooq-sbt-plugin/scala_2.10/sbt_0.13/1.6-SNAPSHOT/ivys/ivy.xml
+++ b/sean8223/jooq-sbt-plugin/scala_2.10/sbt_0.13/1.6-SNAPSHOT/ivys/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:e="http://ant.apache.org/ivy/extra">
-	<info organisation="sean8223" module="jooq-sbt-plugin" revision="1.6.0" status="release" publication="20150611115858" e:sbtVersion="0.13" e:scalaVersion="2.10">
+	<info organisation="sean8223" module="jooq-sbt-plugin" revision="1.6-SNAPSHOT" status="integration" publication="20150318110127" e:sbtVersion="0.13" e:scalaVersion="2.10">
 		<description>
 		jooq-sbt-plugin
 		</description>
@@ -28,10 +28,10 @@
 	</publications>
 	<dependencies>
 		
-		<dependency org="org.scala-lang" name="scala-library" rev="2.10.5" conf="provided->default(compile)"/>
-		<dependency org="org.scala-sbt" name="sbt" rev="0.13.8" conf="provided->default(compile)"/>
-		<override org="org.scala-lang" module="scala-library" matcher="exact" rev="2.10.5"/>
-		<override org="org.scala-lang" module="scala-compiler" matcher="exact" rev="2.10.5"/>
-		<override org="org.scala-lang" module="scala-reflect" matcher="exact" rev="2.10.5"/>
+		<dependency org="org.scala-lang" name="scala-library" rev="2.10.4" conf="provided->default(compile)"/>
+		<dependency org="org.scala-sbt" name="sbt" rev="0.13.7" conf="provided->default(compile)"/>
+		<override org="org.scala-lang" module="scala-library" matcher="exact" rev="2.10.4"/>
+		<override org="org.scala-lang" module="scala-compiler" matcher="exact" rev="2.10.4"/>
+		<override org="org.scala-lang" module="scala-reflect" matcher="exact" rev="2.10.4"/>
 	</dependencies>
 </ivy-module>
